Beginning of bosotrap integration for recettes

--- a/nodejs/app/views/index.ejs
+++ b/nodejs/app/views/index.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html lang="fr">
+
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
+  <% include header.ejs%>
   <body>
+    <% include navigation.ejs%>
+
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
