--- a/nodejs/app/views/recette.ejs
+++ b/nodejs/app/views/recette.ejs
@@ -1,20 +1,144 @@
 <!DOCTYPE html>
+<html lang="fr">
+
 <html>
-<head>
-    <title><%= nom_recette %></title>
-    <link rel='stylesheet' href='/css/style.css' />
-</head>
+<% title = nom_recette %>
+<% include header.ejs %>
 <body>
+<% include navigation.ejs %>
+
+<!-- Page Content -->
+<div class="container">
+
+    <div class="row">
+
+        <div class="col-md-3">
+            <p class="lead">Shop Name</p>
+            <div class="list-group">
+                <a href="#" class="list-group-item active">Category 1</a>
+                <a href="#" class="list-group-item">Category 2</a>
+                <a href="#" class="list-group-item">Category 3</a>
+            </div>
+        </div>
+
+        <div class="col-md-9">
+
+            <div class="thumbnail">
+                <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+                <div class="caption-full">
+                    <p class="pull-right"> Crée le <%= date_creation_recette%></p>
+                    <h4><a href="#"><%= nom_recette %></a></h4>
+                    <div class="row infos-recette">
+                        <div class="col-xs-3 col-xs-push-3 col-sm-2 col-sm-push-6">
+                            <p class="pull-right">
+                                <span class="glyphicon glyphicon-time"></span> <%= temps_preparation %>
+                            </p>
+                        </div>
+                        <div class="col-xs-3 col-xs-push-3 col-sm-2 col-sm-push-6">
+                            <p class="pull-right">
+                                <span class="glyphicon glyphicon-fire"></span> <%= temps_cuisson %>
+                            </p>
+                        </div>
+                        <div class="col-xs-3 col-xs-push-3 col-sm-2 col-sm-push-6">
+                            <p class="pull-right">
+                                <span class="glyphicon glyphicon-user"></span> <%= nombre_personnes %>
+                            </p>
+                        </div>
+                    </div>
+
+                    <p><%= texte_preparation %></p>
+                </div>
+
+                <div class="ratings">
+                    <p class="pull-right">3 reviews</p>
+                    <p>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star-empty"></span>
+                        4.0 stars
+                    </p>
+                </div>
+            </div>
+
+            <div class="well">
+
+                <div class="text-right">
+                    <a class="btn btn-success">Leave a Review</a>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star-empty"></span>
+                        Anonymous
+                        <span class="pull-right">10 days ago</span>
+                        <p>This product was great in terms of quality. I would definitely buy another!</p>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star-empty"></span>
+                        Anonymous
+                        <span class="pull-right">12 days ago</span>
+                        <p>I've alredy ordered another one!</p>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star"></span>
+                        <span class="glyphicon glyphicon-star-empty"></span>
+                        Anonymous
+                        <span class="pull-right">15 days ago</span>
+                        <p>I've seen some better than this, but not at this price. I definitely recommend this item.</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+<!-- /.container -->
+
+
 <h1><%= nom_recette %></h1>
 <h2>
-    Pour <%= nombre_personnes %> <%if (nombre_personnes <= 1) { %> personne <% } else { %> personnes <% } %> -
+    Pour <%= nombre_personnes %>
+    <% if (nombre_personnes <= 1) { %>
+    personne
+    <% } else { %>
+    personnes
+    <% } %>
+    -
     Temps de préparation: <%= temps_preparation %> min -
     Temps de cuisson: <%= temps_cuisson %> min
 </h2>
 
-<p><%= preparation %></p>
+<p><%= texte_preparation %></p>
 
-<p>Ajouté le <%= date_creation %></p>
+<p>Ajouté le <%= date_creation_recette %></p>
 
 </body>
 </html>
