--- a/nodejs/app/views/recette.ejs
+++ b/nodejs/app/views/recette.ejs
@@ -75,7 +75,7 @@
 
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3 aside-recette">
             <table class="table table-bordered table-striped table-condensed table-responsive">
                 <caption>
                     <h3> Liste des ingrédients</h3>
