--- a/nodejs/app/views/recette.ejs
+++ b/nodejs/app/views/recette.ejs
@@ -49,30 +49,6 @@
                 </div>
             </div>
 
-            <div class="well">
-
-                <div class="text-right">
-                    <a class="btn btn-success">Laisser un commentaire</a>
-                </div>
-
-                <% for (var i in comments) { %>
-                <hr>
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <span class="glyphicon <%= (comments[i].note >= 1) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
-                        <span class="glyphicon <%= (comments[i].note >= 2) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
-                        <span class="glyphicon <%= (comments[i].note >= 3) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
-                        <%= comments[i].pseudo %>
-                        <span class="pull-right"><%= comments[i].date_creation %></span>
-                        <p><%= comments[i].text %></p>
-                    </div>
-                </div>
-
-                <% }%>
-
-            </div>
-
         </div>
 
         <div class="col-md-3 aside-recette">
@@ -90,7 +66,7 @@
                 <tbody>
                     <% for (var i in ingredients) { %>
                     <tr>
-                        <td><%= ingredients[i].ingredient %></td>
+                        <td><a href="/ingredient/<%= ingredients[i].id_ingredient%>"> <%= ingredients[i].ingredient %> </a></td>
                         <td><%= (ingredients[i].quantite != 0) ? ingredients[i].quantite : ""; %></td>
                         <td><%= ingredients[i].unite %></td>
                     </tr>
@@ -103,6 +79,42 @@
                 <% for (var i in categories) { %>
                 <a href="#" class="list-group-item"><%= categories[i].nom_categorie%></a>
                 <% } %>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-9">
+            <div class="well">
+
+                <form>
+                    <label for="textarea"> Laisser un commentaire : </label>
+                    <textarea id="textarea" class="form-control" rows="3"></textarea>
+                    <p class="help-block">Vous pouvez agrandir la fenêtre</p>
+                    <div class="text-right">
+                        <button class="btn btn-primary" type="submit"> Envoyer</button>
+                    </div>
+
+                </form>
+
+                <% for (var i in comments) { %>
+                <hr>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="glyphicon <%= (comments[i].note >= 1) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
+                        <span class="glyphicon <%= (comments[i].note >= 2) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
+                        <span class="glyphicon <%= (comments[i].note >= 3) ? "glyphicon-star" : "glyphicon-star-empty";%>"></span>
+                        <%= comments[i].pseudo %>
+                        <span class="pull-right"><%= comments[i].date_creation %></span>
+                        <p><%= comments[i].text %></p>
+                    </div>
+                </div>
+
+                <% }%>
+
             </div>
         </div>
 
