--- a/nodejs/app/views/footer.ejs
+++ b/nodejs/app/views/footer.ejs
@@ -3,7 +3,7 @@
     <!-- Footer -->
     <footer>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <p>Copyright &copy; Your Website 2014</p>
             </div>
         </div>
@@ -16,3 +16,6 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/js/bootstrap.min.js"></script>
+
+<!-- Custom js -->
+<script src="/js/recette.js"></script>
