--- a/nodejs/assets/css/shop-item.css
+++ b/nodejs/assets/css/shop-item.css
@@ -90,6 +90,11 @@ footer {
     margin: 50px 0;
 }
 
-.help-block {
-    margin-bottom: 0px;
+
+caption {
+    padding-top: 0px;
+}
+
+caption h3 {
+    margin-top: 0px;
 }
