--- a/nodejs/app/views/footer.ejs
+++ b/nodejs/app/views/footer.ejs
@@ -20,3 +20,5 @@
 <!-- Custom js -->
 <script src="/js/recette.js"></script>
 
+<!-- Bootstrap notify -->
+<script src="/js/bootstrap-notify.min.js"> </script>
