message for good insert

--- a/nodejs/app/views/footer.ejs
+++ b/nodejs/app/views/footer.ejs
@@ -4,7 +4,7 @@
     <footer>
         <div class="row">
             <div class="col-md-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <p>Copyright &copy; Recetator 3000 - 2016</p>
             </div>
         </div>
     </footer>
