authentifcation with provided tokens. TODO : store tokens

--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -53,7 +53,7 @@
                 <!-- Begin # Login Form -->
 
 
-                <form id="login-form" name="login-form" method="post" action="/api/users/authenticate">
+                <form id="login-form" name="login-form" method="post" action="/api/authenticate">
                     <div class="modal-body">
                         <div id="div-login-msg">
                             <div class="glyphicon glyphicon-chevron-right" id="icon-login-msg">
