--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -28,6 +28,9 @@
                 <li>
                     <a href="#" data-toggle="modal" data-target="#login-modal">Open Login Modal </a>
                 </li>
+                <li>
+                    <a href="#" id="disconnect">Disconnect </a>
+                </li>
 
             </ul>
 
@@ -82,9 +85,8 @@
                     </div>
                 </form>
                 <!-- End # Login Form -->
+
                 <!-- Begin | Lost Password Form -->
-
-
                 <form id="lost-form" name="lost-form" style="display:none;">
                     <div class="modal-body">
                         <div id="div-lost-msg">
@@ -108,17 +110,18 @@
                     </div>
                 </form>
                 <!-- End | Lost Password Form -->
+
                 <!-- Begin | Register Form -->
-
-
-                <form id="register-form" name="register-form" style="display:none;">
+                <form id="register-form" name="register-form" style="display:none;" action="/api/register">
                     <div class="modal-body">
                         <div id="div-register-msg">
                             <div class="glyphicon glyphicon-chevron-right" id="icon-register-msg">
                             </div>
                             <span id="text-register-msg">Register an account.</span>
                         </div>
-                        <input class="form-control" id="register_username" placeholder="Username (type ERROR for error effect)" required="" type="text"> <input class="form-control" id="register_email" placeholder="E-Mail" required="" type="text"> <input class="form-control" id="register_password" placeholder="Password" required="" type="password">
+                        <input class="form-control" id="register_username" placeholder="Username (type ERROR for error effect)" required="" type="text" name="register_username">
+                        <input class="form-control" id="register_email" placeholder="E-Mail" required="" type="text" name="register_email">
+                        <input class="form-control" id="register_password" placeholder="Password" required="" type="password" name="register_password">
                     </div>
 
 
