authentifiation done : need use ajax request to access api or inject token in get or post request

--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -116,8 +116,8 @@
                             <span id="text-register-msg">Register an account.</span>
                         </div>
                         <input class="form-control" id="register_username" placeholder="Username (type ERROR for error effect)" required="" type="text" name="register_username">
-                        <input class="form-control" id="register_email" placeholder="E-Mail" required="" type="text" name="register_email">
                         <input class="form-control" id="register_password" placeholder="Password" required="" type="password" name="register_password">
+                        <input class="form-control" id="register_password_check" placeholder="Password Verification" required="" type="password" name="register_password_check">
                     </div>
 
                     <div class="modal-footer">
