Début vue recherche de recette

--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -17,23 +17,18 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">About</a>
+                    <a href="/recette">Chercher une recette</a>
                 </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#" id="login-button" data-toggle="modal" data-target="#login-modal">Login</a>
-                </li>
-                <li>
-                    <a href="#" id="disconnect">Disconnect </a>
-                </li>
-
             </ul>
 
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" id="login-button" data-toggle="modal" data-target="#login-modal">Connexion</a>
+                </li>
+                <li>
+                    <a href="#" id="disconnect" > Déconnexion</a>
+                </li>
+            </ul>
         </div>
         <!-- /.navbar-collapse -->
 
