--- a/nodejs/app/views/header.ejs
+++ b/nodejs/app/views/header.ejs
@@ -12,6 +12,8 @@
 
     <!-- Custom CSS -->
     <link href="/css/shop-item.css" rel="stylesheet">
+    <link href="/css/search-bar.css" rel="stylesheet">
+    <link href="/css/awesome-bootstrap-checkbox.min.css" rel="stylesheet">
 
     <!-- CSS for animations -->
     <link href="/css/animate.min.css" rel="stylesheet">
