--- a/nodejs/app/views/recette_search.ejs
+++ b/nodejs/app/views/recette_search.ejs
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="input-group" id="adv-search">
-                <input type="text" class="form-control" placeholder="Search for snippets" />
+                <input type="text" class="form-control" placeholder="Cherchez une recette" />
                 <div class="input-group-btn">
                     <div class="btn-group" role="group">
                         <div class="dropdown dropdown-lg">
@@ -18,24 +18,48 @@
                             <div class="dropdown-menu dropdown-menu-right" role="menu">
                                 <form class="form-horizontal" role="form">
                                     <div class="form-group">
-                                        <label for="filter">Filter by</label>
+                                        <label for="filter">Catégorie</label>
                                         <select class="form-control">
-                                            <option value="0" selected>All Snippets</option>
-                                            <option value="1">Featured</option>
-                                            <option value="2">Most popular</option>
-                                            <option value="3">Top rated</option>
-                                            <option value="4">Most commented</option>
+                                            <% categories.forEach(function (category) { %>
+                                            <option value="<%= category.id_categorie %>"><%= category.nom_categorie %></option>
+                                            <% }); %>
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="contain">Author</label>
-                                        <input class="form-control" type="text" />
+                                        <label for="contain">Ingrédients</label>
+                                        <div class="panel panel-default" id="ingredients">
+                                            <div class="panel-body">
+                                                <div class="row">
+                                                    <% ingredients.forEach(function (ingredient) { %>
+                                                    <div class="col-md-6">
+                                                        <div class="checkbox abc-checkbox">
+                                                            <input type="checkbox" id="checkbox<%= ingredient.id_ingredient %>">
+                                                            <label for="checkbox<%= ingredient.id_ingredient %>">
+                                                                <%= ingredient.nom_ingredient %>
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                    <% }); %>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="contain">Contains the words</label>
-                                        <input class="form-control" type="text" />
+                                        <label for="contain">Nombre de personnes</label>
+                                        <div class="input-group">
+                                          <span class="input-group-btn">
+                                              <button type="button" class="btn btn-default btn-number" disabled="disabled" data-type="minus" data-field="quant[1]">
+                                                  <span class="glyphicon glyphicon-minus"></span>
+                                              </button>
+                                          </span>
+                                          <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                                          <span class="input-group-btn">
+                                              <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">
+                                                  <span class="glyphicon glyphicon-plus"></span>
+                                              </button>
+                                          </span>
+                                        </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                                 </form>
                             </div>
                         </div>
@@ -115,6 +139,7 @@
 <!-- /.container -->
 
 <% include footer.ejs%>
+<script src="/js/counter-input.js"></script>
 
 </body>
 </html>
