--- a/nodejs/app/views/header.ejs
+++ b/nodejs/app/views/header.ejs
@@ -18,6 +18,9 @@
     <!-- CSS for animations -->
     <link href="/css/animate.min.css" rel="stylesheet">
 
+    <!-- CSS for staring -->
+    <link href="/css/star-rating.min.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
