--- a/nodejs/app/views/index.ejs
+++ b/nodejs/app/views/index.ejs
@@ -15,7 +15,7 @@
             <div class="col-md-3">
                 <p class="lead"></p>
                 <div class="list-group">
-                    <a href="users/list" class="list-group-item">Liste des utilisateurs</a>
+                    <a href="#" class="list-group-item">Category 1</a>
                     <a href="ingredient/classement" class="list-group-item">Classement des ingrédients</a>
                     <a href="#" class="list-group-item">Category 3</a>
                 </div>
