--- a/nodejs/app/views/404.ejs
+++ b/nodejs/app/views/404.ejs
@@ -12,10 +12,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">404
-                    <small>Page Not Found</small>
+                    <small>Page non trouvé</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="/">Acceuil</a>
                     </li>
                     <li class="active">404</li>
                 </ol>
@@ -29,16 +29,13 @@
                 <div class="jumbotron">
                     <h1><span class="error-404">404</span>
                     </h1>
-                    <p>The page you're looking for could not be found. Reason : <%= error.stack%>. Here are some helpful links to get you back on track:</p>
+                    <p>La page que vous cherchiez est introuvable. Voici quelques liens utiles pour retrouver votre chemin:</p>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="/">Accueil</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a href="services.html">Services</a>
+                            <a href="/about">A propos</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact</a>
