--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="/recette">Chercher une recette</a>
+                    <a href="/recette/search">Chercher une recette</a>
                 </li>
             </ul>
 
@@ -133,3 +133,9 @@
     </div>
 </div>
 <!-- END # MODAL LOGIN -->
+
+<!--[if lt IE 9]>
+    <div class="ie-warning alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</div>
+<![endif]-->
