--- a/nodejs/assets/css/shop-item.css
+++ b/nodejs/assets/css/shop-item.css
@@ -99,6 +99,11 @@ caption h3 {
     margin-top: 0px;
 }
 
+.img-center {
+    margin: 0 auto;
+    display: block;
+}
+
 /* #####################################################################
    #
    #   Project       : Modal Login with jQuery Effects
