--- a/nodejs/app/views/error.ejs
+++ b/nodejs/app/views/error.ejs
@@ -1,3 +1,44 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="fr">
+<% title = "Erreur" %>
+<% include header.ejs %>
+<body>
+<% include navigation.ejs %>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Heading/Breadcrumbs -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Erreur
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Acceuil</a>
+                </li>
+                <li class="active">Erreur </li>
+            </ol>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+
+        <div class="col-lg-12">
+            <div class="jumbotron">
+                Something goes wrong. Here is something to help you.
+                <h1><%= message %></h1>
+                <h2><%= error.status %></h2>
+                <pre><%= error.stack %></pre>
+            </div>
+        </div>
+
+    </div>
+
+</div>
+<!-- /.container -->
+
+<% include footer.ejs%>
+
+</body>
+</html>
